fixed wrapper overflow, inverted filter icon, added link to all products after end of each category at 'home' page

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
 }
 
 .App{
-  /* max-width: min(100vw, 1250px); */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -18,7 +17,8 @@
 }
 
 .wrapper{
-  max-width: 1200px;
+  max-width: min(100vw, 1250px);
+
   margin: 0 auto;
 }
 
